main.css
body {
	width: 100%;
	margin: auto;
	font-family: "Open Sans"
}
/* Header */
.header {
	background-color: rgba(0, 0, 0, 0.8);
	background: #E0E0EB;
	width: 100%;
	top: 0;
	position: fixed;
	z-index: 1;
	padding-bottom: 5px;
}

#logo {
	height: auto;
  width: auto;
  max-width: 300px;
  max-height: 300px;
	float: left;
	margin-left: 20px;
}

a {
	text-decoration: none;
	color: #800000;
}

li {
	list-style: none;
	float: left;
	margin-left: 20px;
	margin-right: 20px;
	padding-top: 10px

}


/* Banner */
.banner {
	background: url(images/banner.svg) no-repeat center center fixed;
	background-size: cover;
	text-shadow: 2px 2px 4px #000000;

}

.banner img{
  text-align: left;
}
.banner h1{
  text-align: right;
}
.banner h2{
  text-align: right;
}
table{
	width:100%;
	height:750px;
	table-layout: fixed;
  border: 0px;
}

table tr td:empty {
    width: 100px;
}

td{
	vertical-align: center;
	width: 50%;
}

.bannerText {
	text-align: right;
}
#me {
	height: auto;
  width: auto;
  max-width: 300px;
  max-height: 300px;


}
h1{
	color: white;
	font-size: 50pt;
}

h2{
	color:white;
	font-size: 30pt;
	font-style: italic;
}

/* About Me */
a.button{
		display: block;
		padding: 2px;
		font-size: 15pt;
		width: 150px;
		color: white;
		background-color: #800000;
		text-align: center;
		margin: auto;
	}
a.button:hover{
	background-color: #ff5555;
}

h3{
	color: #800000;
	font-size: 24pt;
	text-align: center;
}
p {
	font-size: 18pt;
	text-align: center;
}
.nav {
	float: right;
}

.content {
	width: 100%;
	margin: 0 auto;
	padding-bottom:50px;

}

/* Footer */
.footer{
	background-color: #800000;
}

.footer img{
	height: auto;
  width: auto;
  max-width: 50px;
  max-height: 50px;
	padding: 10px;
}

/*Bio Page*/

.bio{
	padding-top: 100px;
	padding-left: 20%;
	padding-right: 20%;
	padding-bottom: 50px;
	overflow: auto;
	text-align: center;
}

.bio p{
	font-size: 14pt;
}

/*Contact Page*/

.contact{
	padding-top: 70px;
	text-align: center;
	padding-bottom: 50px;

}

.contact h1{
	font-size: 25pt;

}

.contact img{
	vertical-align: middle;
}

.contact p{
	color: white;
	text-align: center;
}

.contact a{
	color: white;
}

/*Portfolio*/

.portfolio{
	padding-top: 100px;
	padding-bottom: 160px;
	margin: auto;
	text-align: center;
	overflow: auto;
	width: 60%;

}

.portfolio img{
	float: left;
}

